--- a/src/app/components/menu/home/home.component.html
+++ b/src/app/components/menu/home/home.component.html
@@ -5,7 +5,7 @@
                 <div class="container-menu-text">
                     <div class="row">
                         <div class="col"><span>Mi Despensa</span></div>
-                        <div class="col-auto" style="padding-right: 5rem;"><span>a</span></div>
+                        <div class="col-auto" style="padding-right: 5rem;"><mat-icon>chevron_right</mat-icon></div>
                     </div>
                 </div>
             </div>
@@ -15,7 +15,7 @@
                 <div class="container-menu-text">
                     <div class="row">
                         <div class="col"><span>Recetas</span></div>
-                        <div class="col-auto" style="padding-right: 5rem;"><span>a</span></div>
+                        <div class="col-auto" style="padding-right: 5rem;"><mat-icon>chevron_right</mat-icon></div>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <div class="container-menu-text">
                     <div class="row">
                         <div class="col"><span>Restaurantes</span></div>
-                        <div class="col-auto" style="padding-right: 5rem;"><span>a</span></div>
+                        <div class="col-auto" style="padding-right: 5rem;"><mat-icon>chevron_right</mat-icon></div>
                     </div>
                 </div>
             </div>
