--- a/src/app/components/menu/home/home.component.html
+++ b/src/app/components/menu/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container-menu-general">
         <div class="row">
             <div class="col">
-                <div class="container-menu img img-1">
+                <div class="container-menu img img-1" (click)="redirectToDespensa()">
                     <div class="container-menu-text">
                         <div class="row">
                             <div class="col"><span>Mi Despensa</span></div>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="container-menu img img-2">
+                <div class="container-menu img img-2"  (click)="redirectToRecipes()">
                     <div class="container-menu-text">
                         <div class="row">
                             <div class="col"><span>Recetas</span></div>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="container-menu img img-3">
+                <div class="container-menu img img-3"  (click)="redirectToRestaurants()">
                     <div class="container-menu-text">
                         <div class="row">
                             <div class="col"><span>Restaurantes</span></div>
