--- a/src/app/components/menu/home/home.component.css
+++ b/src/app/components/menu/home/home.component.css
@@ -2,10 +2,11 @@
 
 /* font-family: 'Oxygen', sans-serif; */
 /* 300 400 700 */
-.container-menu-general{
+.container-menu-general {
     font-family: 'Oxygen', sans-serif;
     margin: 5rem 0;
 }
+
 .container-menu {
     height: 11.25rem;
     width: 22rem;
@@ -17,15 +18,16 @@
     cursor: pointer;
 }
 
-.img-1{
+.img-1 {
     background: url('src\assets\img\home-image-1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: contain;
     transition: .3s;
-    
+
 }
-.img-1:hover{
+
+.img-1:hover {
     background-size: 105%;
     background-repeat: no-repeat;
     object-fit: contain;
@@ -33,13 +35,14 @@
     transition: all 150ms ease-in-out;
 }
 
-.img-2{
+.img-2 {
     background: url('src\assets\img\home-image-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: contain;
 }
-.img-2:hover{
+
+.img-2:hover {
     background-size: 105%;
     background-repeat: no-repeat;
     object-fit: contain;
@@ -47,13 +50,14 @@
     transition: all 150ms ease-in-out;
 }
 
-.img-3{
+.img-3 {
     background: url('src\assets\img\home-image-3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: contain;
 }
-.img-3:hover{
+
+.img-3:hover {
     background-size: 105%;
     background-repeat: no-repeat;
     object-fit: contain;
@@ -68,80 +72,150 @@
     background-color: rgba(0, 0, 0, .6);
     padding: .25rem 0 0 2rem;
 }
+
 .container-menu-text span {
     font-size: 1rem;
     font-weight: 600;
     color: #FFFFFF;
 }
-.container-menu-text mat-icon{
-    margin:0; padding: 0;
+
+.container-menu-text mat-icon {
+    margin: 0;
+    padding: 0;
     color: #FFFFFF;
     border: 1px solid white;
     border-radius: 100%;
 }
 
-.search-container-general{
+.search-container-general {
     font-family: 'Oxygen', sans-serif;
     margin: 5rem 0;
 }
-.search-container{
+
+.search-container {
     text-align: center;
     padding: 2rem 0;
 }
-.search-container h2{
+
+.search-container h2 {
     font-size: 4rem;
 }
-.search-container p{
+
+.search-container p {
     font-size: 1.5rem;
     font-weight: 300;
 }
 
 ::ng-deep .mat-form-field-infix {
-  top: -3px;
+    top: -3px;
 }
+
 .my-icon {
     z-index: 1;
     position: relative;
 }
-.input-group{
+
+.input-group {
     padding: 0 10rem;
 }
-.input-group-prepend span{
+
+.input-group-prepend span {
     padding: 1rem .5rem;
 }
+
 .form-control {
     background-color: #EEE;
-    border: none ;
+    border: none;
     padding: 1rem .5rem;
 }
-.input-group-append button{
+
+.input-group-append button {
     padding: 1rem .5rem;
 }
+
 .form-control:focus {
     border: none;
     box-shadow: none;
 }
-.input-group-text{
+
+.input-group-text {
     background-color: #EEE;
-    border: none ;
+    border: none;
 }
 
-.btn-background{
+.btn-background {
     background-color: #EEE;
     border-top-right-radius: 1.875rem;
     border-bottom-right-radius: 1.875rem;
 }
-.btn-add-ingredient mat-icon{
+
+.btn-add-ingredient mat-icon {
     border: 1px solid #000;
     border-radius: .25rem;
     vertical-align: top !important;
 
 }
-.btn-recipe-search{
+
+.btn-recipe-search {
     background-color: #E74E00;
     color: #FFFFFF;
     width: 15rem;
     padding-left: 2rem !important;
     border-radius: 1.875rem;
     font-weight: 700;
+}
+
+.recipes-card {
+    display: inline-block;
+    width: 220px;
+    height: 5rem;
+    margin: 10px;
+    background-color: #fefefe;
+}
+.recipes-card-content{
+    padding-top: 7.75rem;
+}
+.recipes-card-header{
+    text-align: center;
+}
+.recipes-card-header h3{
+    font-weight: 700;
+    font-size: 1.25rem;
+    margin: 0;
+}
+.recipes-card-header p{
+    margin-bottom: .5rem;
+    color: #857F7F;
+}
+.recipes-card-header span{
+    font-weight: 300;
+    color: #857F7F;
+}
+.recipes-card span{
+    display: block;
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    margin-left: 2.2rem;
+}
+.recipes-card-details-title{
+    font-weight: 700;
+}
+.recipe-photo {
+    border-radius: 50%;
+    display: block;
+    width: 150px;
+    height: 150px;
+    margin-top: 0;    
+    border: .25rem solid #E4E4E4;
+}
+.bottom-container {
+    position: relative;
+    z-index: -10;
+
+    display: inline-block;
+    width: 220px;
+    height: 300px;
+    margin-top: -119px;
+    background-color: #E4E4E4;
 }
