--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,7 +4,7 @@
             <mat-icon>menu</mat-icon>
         </button>
         <h1 class="app-name">EveryoneCanCook</h1>
-        <span class="example-spacer"></span>
+        <span class="spacer"></span>
         <span flex></span>
         <div>
             <button mat-icon-button>
@@ -14,7 +14,7 @@
                 <mat-icon>favorite_border</mat-icon>
             </button>
             <button mat-icon-button>
-                <mat-icon style="font-size: 2.5rem" [ngStyle]="{'color': '#25C54D'}">account_circle</mat-icon>
+                <mat-icon style="font-size: 2.5rem; margin-right: 40%;" [ngStyle]="{'color': '#25C54D'}">account_circle</mat-icon>
             </button>
         </div>
     </mat-toolbar>
