--- a/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.css
+++ b/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.css
@@ -27,6 +27,10 @@
     border: 4px solid #E74E00;
 }
 
+.recipe-stats{
+    margin-top: 1rem;
+}
+
 .recipe-details h4 {
     font-family: 'Oxygen', sans-serif;
     font-size: 1.2rem;
