--- a/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.css
+++ b/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.css
@@ -25,9 +25,10 @@
     margin: 3rem 0 0 0;
     width: 7rem;
     border: 4px solid #E74E00;
+    background-color: #E74E00;
 }
 
-.recipe-stats{
+.recipe-stats {
     margin-top: 1rem;
 }
 
@@ -59,15 +60,17 @@
 .recipe-tabs-container {
     margin-top: 4rem;
 }
+
 ::ng-deep .mat-tab-group.mat-primary .mat-ink-bar {
     background-color: #E74E00 !important;
 }
+
 .mat-tab-contain {
     margin-top: 1rem;
     font-family: 'Oxygen', sans-serif;
 }
 
-.recipe-container-img{
+.recipe-container-img {
     background-color: #707070;
     width: 35rem;
     height: 40rem;
@@ -77,7 +80,20 @@
     align-content: center;
     justify-content: center;
 }
-.recipe-container-img span{
+
+.recipe-container-img span {
     color: #FFFFFF;
-    
+
+}
+
+ngb-rating {
+    color: #EFD345;
+}
+
+ngb-rating .sr-only {
+    color: #E74E00;
+}
+
+.btn-bb:hover {
+    color: #E74E00;
 }
