validate search button

--- a/src/app/components/menu/home/home.component.html
+++ b/src/app/components/menu/home/home.component.html
@@ -59,7 +59,7 @@
                 </button>
             </div>
             <div class="input-group-append">
-                <div class="btn-background"><button class="input-group-text btn-recipe-search">Buscar recetas</button>
+                <div class="btn-background"><button class="input-group-text btn-recipe-search" (click)="searchRecipe()">Buscar recetas</button>
                 </div>
             </div>
         </div>
