--- a/src/app/components/menu/home/home.component.html
+++ b/src/app/components/menu/home/home.component.html
@@ -95,6 +95,12 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col text-center">
+                <span class="error-message">{{ errorMessage }}</span>
+                <div><button mat-raised-button routerLink="../recipes/create-recipe" class="btn-create">Agrega tú receta</button></div>
+            </div>
+        </div>
     </div>
     
 </div>
